--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ function changeImg()
 </div>
 <div id="Musician"  style="background-color:rgb(54,58,75);color:white">
 	<p><br><h1 style="text-align:center">介绍一下自己</h1><br>
-	&nbsp&nbsp&nbsp&nbsp 1993年出生，2015年大学毕业，在山东科技大学泰山科技学院学的机械电子工程，目前在职，工作地点暂时觉得不方便透露啦，单位的主要工作虽然与计算机关系不大，但我目前基本上是负责单位的技术维护和新媒体工作。<br><br>&nbsp&nbsp&nbsp&nbsp 
+	&nbsp&nbsp&nbsp&nbsp 1993年出生，2015年大学毕业，在山东科技大学泰山科技学院学的机械电子工程，目前在职，工作地点暂时觉得不方便透露啦，单位的主要工作虽然与计算机关系不大，但我目前基本上是负责单位的技术维护、程序开发和一些涉及新媒体的工作等。<br><br>&nbsp&nbsp&nbsp&nbsp 
 	目前能拿来就用的大概就是vb和qt了，对c语言也很熟悉，但是c语言本身不适合做项目，我本身学编程就是兴趣，是希望学了就用，而且都是现学现用的，基本上是边学边做，然后慢慢的就熟悉了，所以类似java、php、python这些，都接触过，也有基本的了解，但由于实际工作中用不到，我也没有动力去深入研究。<br><br>&nbsp&nbsp&nbsp&nbsp 
 	其实我对计算机感兴趣不仅限于编程，所有跟计算机有关系的内容我都感兴趣，包括但不限于各类软件，比如我还会一点儿photoshop，还会edius之类的视频剪辑软件，之前也有参加青啤微营销拍过微电影。然后是，各类音乐工作站、音频处理软件什么的，比如做音乐，就是写歌啊编曲啊这些，前段时间我还录了编曲教程传了B站，链接在这儿<a style="color:yellow" target="_blank" href="https://www.bilibili.com/video/av22809982">【番茄的音乐教室】</a>，虽然不专业，但是如果对电脑音乐或者音视频处理有特殊需求的话，好像...也挺适合我。（哈哈哈）<br><br>&nbsp&nbsp&nbsp&nbsp 
 	
